contrast fix

--- a/app/assets/stylesheets/arclight.scss
+++ b/app/assets/stylesheets/arclight.scss
@@ -18,7 +18,7 @@ a {
 
 #within_collection:focus {
 	box-shadow: 0 0 0 0.25rem rgba(158, 104, 199, 0.5);
-	border-color: #9e68c7;
+	border-color: #8b49b3;
 }
 
 .al-repositories .card-body  {
@@ -94,7 +94,7 @@ a {
 
 #using-these-materials-teaser {
  	background: #f3f2f1;
-	border-left: 8px solid #9e68c7;
+	border-left: 8px solid #8b49b3;
 	padding: 1.5rem;
 	float: right;
 	margin: 2rem 0 1rem 2rem;
@@ -235,20 +235,20 @@ a {
 }
 
 .context-sidebar .card-title button.btn-close:hover {
-	background-color: #9e68c7 !important;
-  border-color: #9e68c7 !important;
+	background-color: #8b49b3 !important;
+  border-color: #8b49b3 !important;
 }
 
 .context-sidebar .card-title button.btn-close:focus {
-	background-color: #9e68c7 !important;
-  border-color: #9e68c7 !important;
+	background-color: #8b49b3 !important;
+  border-color: #8b49b3 !important;
   box-shadow: 0 0 0 .2rem rgba(70, 22, 107, 0.5) !important;
   outline: none !important;
 }
 
 .context-sidebar .card-title button.btn-close:active {
-	background-color: #9e68c7 !important;
-  border-color: #9e68c7 !important;
+	background-color: #8b49b3 !important;
+  border-color: #8b49b3 !important;
 }
 
 .context-sidebar .card-title .collection-title a.btn-default {
@@ -272,8 +272,8 @@ a {
 
 .context-sidebar .card-title .request-btn {
   width: 100%;
-  background-color: #9e68c7;
-  border-color: #9e68c7;
+  background-color: #8b49b3;
+  border-color: #8b49b3;
 }
 
 .context-sidebar .card-title .request-btn:hover {
