--- a/app/assets/stylesheets/show_component.scss
+++ b/app/assets/stylesheets/show_component.scss
@@ -26,8 +26,8 @@
   }
   .request-btn {
     width: 100%;
-    background-color: #9e68c7;
-    border-color: #9e68c7;
+    background-color: #8b49b3;
+    border-color: #8b49b3;
   }
 
 }
